jenkins-nginx-tls/jenkins/ingress-jenkins.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - shpak.co.uk
    secretName: jenkins-tls
  rules:
  - host: shpak.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 80
